update to add initial skill disposition handling

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="TeamPanel/Team.js"></script>
   <script type="text/javascript" src="TeamPanel/Teamadd.js"></script>
   <script type="text/javascript" src="TeamOutstate/TeamOutState.js"></script>
+  <script type="text/javascript" src="SkillDisposition/SkillDisp.js"></script>
   <script type="text/javascript" src="OutstatePanel/OutState.js"></script>
   <script type="text/javascript" src="OutstatePanel/OutStateadd.js"></script>
   <script type="text/javascript" src="DispositionPanel/Disposition.js"></script>
