--- a/app/SkillDisposition/SkillDisp.html
+++ b/app/SkillDisposition/SkillDisp.html
@@ -31,8 +31,13 @@
                 <option  value="{{tm.yesnos[1].name}}" {{tm.yesnos[1].sel}} >{{tm.yesnos[1].name}}</option>
             </select>
         </td>
-        <td>{{tm.ListPriority}}</td>
-        <td>{{tm.UseComments}}</td>
+        <td><input type="text" ng-model="tm.ListPriority" /></td>
+        <td>
+            <select ng-model="tm.useComm" ng-change="priorityChanged(tm.idx)">
+                <option value="true" {{tm.useSelected[0].sel}}>true</option>
+                <option value="false" {{tm.useSelected[1].sel}}>false</option>
+            </select>
+        </td>
         <td>{{tm.CommentsRequired}}</td>
         <td>{{tm.LongDescription}}</td>
         <td>{{tm.Notes}}</td>
