update to only do SOAP accesses.  Removing Token retrieval.

--- a/app/icLogin/login.html
+++ b/app/icLogin/login.html
@@ -5,7 +5,7 @@
     <span us-spinner spinner-on="showSpinner"></span>
     <div class="panel-body">
         <form tovalidate class="form-group">
-            <fieldset>
+<!--            <fieldset>
                 <label for="username">Username</label>
                 <input class="form-control" type="email" id="username" ng-model="user.name"/>
             </fieldset>
@@ -20,7 +20,7 @@
             <fieldset>
                 <label for="username">Vendor Name</label>
                 <input class="form-control" type="text" id="vendorName" ng-model="user.vendName"/>
-            </fieldset>
+            </fieldset>  -->
             <fieldset>
                 <label for="username">Business Unit #</label>
                 <input class="form-control" type="text" id="businessUnit" ng-model="user.BusUnit"/>
