--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="SkyboxApp">
 <head>
   <meta charset="ISO-8859-1">
-  <title>Skybox BRD Wizard</title>
+  <title>Skybox Central Updater</title>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="app.js"></script>
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="DispositionPanel/Dispositionadd.js"></script>
   <script type="text/javascript" src="CampaignPanel/Campaign.js"></script>
   <script type="text/javascript" src="CampaignPanel/CampaignAdd.js"></script>
-  <script type="text/javascript" src="SkillPanel/Skill.js"></script>
+<!--  <script type="text/javascript" src="SkillPanel/Skill.js"></script> -->
 
   <!-- include the Bootstrap CSS -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
@@ -38,7 +38,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Skybox BRD Wizard</a>
+        <a class="navbar-brand" href="/">Skybox Central Updater</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right"  ng-repeat="tab in tabs">
