Change Web name to Skybox Central Updater

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Skybox Central Updater</a>
+        <a class="navbar-brand" href="/">Skybox Central Updater  -  {{Acct}}</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right"  ng-repeat="tab in tabs">
