Allow multiple updates in Campaign add

--- a/app/CampaignPanel/CampaignAdd.html
+++ b/app/CampaignPanel/CampaignAdd.html
@@ -28,3 +28,7 @@
 
 <input type="submit" class="btn btn-warning btn-lg" ng-click="cancelCampaignUpdate()" value="Cancel" />
 
+
+<br/><br/>
+    Copy and Paste Campaign Names here from BRD <textarea style="width:250px;height:150px;" ng-model="massInput"/>
+
