--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
   <script type="text/javascript" src="DispositionPanel/Dispositionadd.js"></script>
   <script type="text/javascript" src="CampaignPanel/Campaign.js"></script>
   <script type="text/javascript" src="CampaignPanel/CampaignAdd.js"></script>
-<!--  <script type="text/javascript" src="SkillPanel/Skill.js"></script> -->
+  <script type="text/javascript" src="configCORS.js"></script>
+  <script type="text/javascript" src="SkillPanel/skill.js"></script>
+  <script type="text/javascript" src="SkillPanel/skillAddMod.js"></script>
 
   <!-- include the Bootstrap CSS -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
