--- a/app/SkillPanel/skill.html
+++ b/app/SkillPanel/skill.html
@@ -5,21 +5,31 @@
     <tr  class="active">
         <TH>Skill No</TH>
         <th>Skill Name</th>
+        <th>Skill Type</th>
         <th>Status</th>
-        <th>Description</th>
-        <th>Notes</th>
-        <th>Last Modified</th>
+        <th>Campaign</th>
+        <th>OB</th>
+        <th>Custom<br/>CallerID</th>
+        <th>SL/%</th>
+        <th>Short<br/>Abandons</th>
+        <th>Priority</th>
         <th></th>
     </tr>
     <tr ng-repeat="sk in SkillData">
         <td>{{sk.SkillNo}}</td>
         <td>{{sk.SkillName}}</td>
+        <td>{{sk.MediaType}}</td>
         <td>{{sk.Status}}</td>
-        <td>{{sk.Description}}</td>
-        <td>{{sk.Notes}}</td>
-        <td>{{sk.LastModified}}</td>
-        <td><button ng-click="ModCampaign(camp)">Mod</button> </td>
+        <td>{{sk.CampaignName}}</td>
+        <td>
+        <input type="checkbox" ng-model="sk.OutboundSkill" ng-checked="sk.OutboundSkill" disabled="disabled"/>
+        </td>
+        <td>{{sk.CallerIDNumber}}</td>
+        <td>{{sk.SLASeconds}}/{{sk.SLAPercent}}</td>
+        <td>{{sk.UseShortAbandonThreshold}},{{sk.ShortAbandonThreshold}}</td>
+        <td>{{sk.QueueInitPriority}}</td>
+        <td><button ng-click="ModSkill(sk)">Mod</button> </td>
     </tr>
 </table>
 <br/><br/>
-<input type="submit" class="btn btn-primary btn-lg" ng-click="AddCampaign()" value="ADD Skill" />
+<input type="submit" class="btn btn-primary btn-lg" ng-click="AddSkill()" value="ADD Skill" />
