--- a/app/SkillPanel/skill.html
+++ b/app/SkillPanel/skill.html
@@ -1,6 +1,10 @@
 <h2 class="text-center">Skills</h2>
 <span us-spinner spinner-on="showSpinner"></span>
 <br/><br/><br/>
+
+<input type="submit" class="btn btn-primary btn-lg" ng-click="AddSkill()" value="ADD Skill" />
+<input type="submit" class="btn btn-primary btn-lg" ng-click="AddBRDSkill()" value="ADD BRD Skills" />
+<br/><br/>
 <table class="table table-bordered">
     <tr  class="active">
         <TH>Skill No</TH>
@@ -35,5 +39,3 @@
         <td><button ng-click="ModSkill(sk)">Mod</button> </td>
     </tr>
 </table>
-<br/><br/>
-<input type="submit" class="btn btn-primary btn-lg" ng-click="AddSkill()" value="ADD Skill" />
