--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
   <script type="text/javascript" src="CampaignPanel/CampaignAdd.js"></script>
   <script type="text/javascript" src="configCORS.js"></script>
   <script type="text/javascript" src="SkillPanel/skill.js"></script>
-  <script type="text/javascript" src="SkillPanel/skillAddMod.js"></script>
+  <script type="text/javascript" src="SkillPanel/SkillAddMod.js"></script>
+  <script type="text/javascript" src="SkillPanel/SkillBRDAdd.js"></script>
 
   <!-- include the Bootstrap CSS -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
