saving latest changes

--- a/app/DispositionPanel/DispositionAdd.html
+++ b/app/DispositionPanel/DispositionAdd.html
@@ -28,3 +28,6 @@
 
 <input type="submit" class="btn btn-warning btn-lg" ng-click="cancelDispositionUpdate()" value="Cancel" />
 
+
+<br/><br/>
+Copy and Paste Disposition Names here from BRD <textarea style="width:250px;height:150px;" ng-model="massDispInput"/>
