--- a/app/SkillDisposition/SkillDisp.html
+++ b/app/SkillDisposition/SkillDisp.html
@@ -28,10 +28,12 @@
         <td>{{tm.Description}}</td>
         <td>{{tm.Status}}</td>
         <td>
-            <select  ng-model="tm.Assoc" ng-change="AssocChanged(tm.idx)">
+            <input type="checkbox" ng-model="tm.Assoc" ng-checked="tm.Assoc"  ng-change="AssocChanged(tm.idx)"/>
+
+ <!--           <select  ng-model="tm.Assoc" ng-change="AssocChanged(tm.idx)">
                 <option  value="{{tm.yesnos[0].name}}" {{tm.yesnos[0].sel}} >{{tm.yesnos[0].name}}</option>
                 <option  value="{{tm.yesnos[1].name}}" {{tm.yesnos[1].sel}} >{{tm.yesnos[1].name}}</option>
-            </select>
+            </select>  -->
         </td>
         <td>
             <input type="text" ng-model="tm.ListPriority" ng-show="tm.showit" ng-change="priorityChanged(tm.idx)"/>
