Changes to insert a proxy for CORS problem and straighten out case problems

--- a/app/icLogin/login.html
+++ b/app/icLogin/login.html
@@ -30,7 +30,7 @@
                 <input class="form-control" type="text" id="soapPassword" ng-model="user.soapPass"/>
             </fieldset>
             <br/>
-            <input type="submit" class="btn btn-primary btn-lg" ng-click="attemptLogin(user)" value="Login" />
+            <input type="submit" class="btn btn-primary btn-lg" ng-click="attemptLogin2(user)" value="Login" />
         </form>
     </div>
 </div>
