--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,15 @@
   <script type="text/javascript" src="MainPanel/main.js"></script>
   <script type="text/javascript" src="TeamPanel/Team.js"></script>
   <script type="text/javascript" src="TeamPanel/Teamadd.js"></script>
-  <script type="text/javascript" src="TeamOutstate/TeamOutState.js"></script>
+  <script type="text/javascript" src="TeamOutState/TeamOutState.js"></script>
   <script type="text/javascript" src="SkillDisposition/SkillDisp.js"></script>
-  <script type="text/javascript" src="OutstatePanel/OutState.js"></script>
-  <script type="text/javascript" src="OutstatePanel/OutStateadd.js"></script>
+  <script type="text/javascript" src="OutStatePanel/OutState.js"></script>
+  <script type="text/javascript" src="OutStatePanel/OutStateadd.js"></script>
   <script type="text/javascript" src="DispositionPanel/Disposition.js"></script>
   <script type="text/javascript" src="DispositionPanel/Dispositionadd.js"></script>
   <script type="text/javascript" src="CampaignPanel/Campaign.js"></script>
   <script type="text/javascript" src="CampaignPanel/CampaignAdd.js"></script>
-  <script type="text/javascript" src="SkillPanel/skill.js"></script>
+  <script type="text/javascript" src="SkillPanel/Skill.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillAddMod.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillBRDAdd.js"></script>
 
