--- a/app/DispositionPanel/Disposition.html
+++ b/app/DispositionPanel/Disposition.html
@@ -2,6 +2,7 @@
 <span us-spinner spinner-on="showSpinner"></span>
 <br/><br/>
 <input type="submit" class="btn btn-primary btn-lg" ng-click="AddDisposition()" value="ADD Disposition" />
+<input type="submit" class="btn btn-primary btn-lg" ng-click="updateListdisp()" value="List Update" />
 
 <table class="table table-bordered">
     <tr  class="active">
