--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,8 @@
   <script type="text/javascript" src="Agents/Agent.js"></script>
   <script type="text/javascript" src="UserLogin/UserLogin.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillListMod.js"></script>
+  <script type="text/javascript" src="SkillPanel/SkillPostContactMapping.js"></script>
+  <script type="text/javascript" src="POCs/POCs.js"></script>
 
   <!-- include the Bootstrap CSS -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
