--- a/app/SkillDisposition/SkillDisp.html
+++ b/app/SkillDisposition/SkillDisp.html
@@ -37,7 +37,7 @@
             </select>  -->
         </td>
         <td>
-            <input type="text" ng-model="tm.ListPriority" ng-show="tm.showit" ng-change="priorityChanged(tm.idx)"/>
+            <input type="text" ng-model="tm.ListPriority" ng-show="tm.showit" ng-change="priorityChanged(tm.idx)"  size="5"/>
         </td>
         <td>
             <input type="checkbox" ng-model="tm.UseComments" ng-checked="tm.UseComments" ng-show="tm.showit" ng-change="useComChanged(tm.idx)"/>
